--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superhero/eventflow-db",
-  "version": "4.7.3",
+  "version": "4.7.4",
   "description": "Eventflow db is a set of common database logic in the eventflow ecosystem.",
   "keywords": [
     "eventflow"
@@ -20,9 +20,9 @@
     "@superhero/db": "^0.5.2"
   },
   "devDependencies": {
-    "@superhero/audit": "4.7.3",
+    "@superhero/audit": "4.7.4",
     "@superhero/syntax-check": "0.0.2",
-    "@superhero/locator": "4.7.3"
+    "@superhero/locator": "4.7.4"
   },
   "author": {
     "name": "Erik Landvall",
@@ -30,6 +30,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/superhero/eventflow-db.git"
+    "url": "git+https://github.com/superhero/eventflow-db.git"
   }
 }
