--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test": "syntax-check; node --test --test-reporter=@superhero/audit/reporter --experimental-test-coverage"
   },
   "dependencies": {
-    "mysql2": "^3.11.5",
-    "@superhero/db": "^0.5.2"
+    "mysql2": "^3.16.1",
+    "@superhero/db": "1.0.0"
   },
   "devDependencies": {
     "@superhero/audit": "4.7.28",
